deploy/kaptn-istio-gw.yml
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"networking.istio.io/v1beta1","kind":"Gateway","metadata":{"annotations":{},"name":"kaptn-gateway","namespace":"kaptn"},"spec":{"selector":{"istio":"ingressgateway"},"servers":[{"hosts":["kaptn.local"],"port":{"name":"http","number":80,"protocol":"HTTP"}}]}}
  creationTimestamp: "2025-08-09T11:09:55Z"
  generation: 2
  name: kaptn-gateway
  namespace: kaptn
  resourceVersion: "1467406"
  uid: 724fe7be-1c27-45fd-871b-713c79707550
spec:
  selector:
    istio: ingressgateway
  servers:
  - hosts:
    - dev.kaptn.dev
    port:
      name: http
      number: 80
      protocol: HTTP
    tls:
      httpsRedirect: true
  - hosts:
    - dev.kaptn.dev
    port:
      name: https
      number: 443
      protocol: HTTPS
    tls:
      credentialName: kaptn-dev-cert
      mode: SIMPLE
